--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       </div>
       <div class="text-center mt-8 flex justify-center items-center">
         <p>Konectd Payments powered by</p>
-        <img src="ks-konectd-solutions-logo.png" alt="Konectd Solutions" class="ml-2 h-6">
+        <img src="ks-konectd-solutions-logo 1.png" alt="Konectd Solutions" class="ml-2 h-6">
       </div>
     </div>
   </footer>
