--- a/index.html
+++ b/index.html
@@ -188,6 +188,58 @@
     </div>
   </section>
 
+	  <div class="section-divider"></div>
+  
+<!-- Konectd Solutions Portfolio -->
+  <section class="section-padding container mx-auto px-8 bg-black/30">
+    <h2 class="text-4xl md:text-5xl font-heading font-semibold text-center mb-16 text-white">
+      The Full Konectd Solutions Portfolio
+    </h2>
+    <p class="text-xl text-muted text-center mb-16 max-w-4xl mx-auto">
+      Marketing is just one part of how we help businesses thrive. Konectd Solutions offers a complete ecosystem of services — all designed to support small and medium-sized companies like yours.
+    </p>
+    <div class="grid md:grid-cols-2 lg:grid-cols-5 gap-8 max-w-7xl mx-auto">
+      <a href="https://konectd.solutions" class="block glass p-8 rounded-2xl text-center hover:bg-white/5 transition">
+        <i data-lucide="briefcase" class="w-10 h-10 mx-auto mb-6 text-primary"></i>
+        <h3 class="text-xl font-heading font-semibold mb-3 text-white">Advisory & Consulting</h3>
+        <p class="text-sm text-muted">
+          Strategic guidance to scale smarter — from operations to growth planning.
+        </p>
+      </a>
+
+      <a href="https://konectd.solutions" class="block glass p-8 rounded-2xl text-center hover:bg-white/5 transition">
+        <i data-lucide="credit-card" class="w-10 h-10 mx-auto mb-6 text-primary"></i>
+        <h3 class="text-xl font-heading font-semibold mb-3 text-white">Payment & Payroll</h3>
+        <p class="text-sm text-muted">
+          Secure, streamlined payments and payroll — save time and reduce errors.
+        </p>
+      </a>
+
+      <a href="https://konectd.solutions" class="block glass p-8 rounded-2xl text-center hover:bg-white/5 transition">
+        <i data-lucide="building" class="w-10 h-10 mx-auto mb-6 text-primary"></i>
+        <h3 class="text-xl font-heading font-semibold mb-3 text-white">Real Estate</h3>
+        <p class="text-sm text-muted">
+          Property solutions, leasing support, and investment guidance tailored for business owners.
+        </p>
+      </a>
+
+      <a href="https://konectd.solutions" class="block glass p-8 rounded-2xl text-center hover:bg-white/5 transition">
+        <i data-lucide="landmark" class="w-10 h-10 mx-auto mb-6 text-primary"></i>
+        <h3 class="text-xl font-heading font-semibold mb-3 text-white">Financing</h3>
+        <p class="text-sm text-muted">
+          Access to capital, lines of credit, and funding options to fuel your next step.
+        </p>
+      </a>
+
+      <div class="glass p-8 rounded-2xl text-center border border-success/40 bg-success/5">
+        <i data-lucide="megaphone" class="w-10 h-10 mx-auto mb-6 text-success"></i>
+        <h3 class="text-xl font-heading font-semibold mb-3 text-success">Marketing</h3>
+        <p class="text-sm text-muted">
+          AI-powered customer acquisition, reputation, local SEO, social, and re-engagement — you're here now.
+        </p>
+      </div>
+    </div>
+  </section>
   <!-- Footer -->
  <footer class="py-12 glass border-t border-white/10">
     <div class="max-w-6xl mx-auto px-6 text-gray-400 text-sm">
