--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         </p>
       </a>
 
-      <a href="https://konectd.solutions" class="block glass p-8 rounded-2xl text-center hover:bg-white/5 transition">
+       <div class="glass p-8 rounded-2xl text-center border border-success/40 bg-success/5">
         <i data-lucide="credit-card" class="w-10 h-10 mx-auto mb-6 text-primary"></i>
         <h3 class="text-xl font-heading font-semibold mb-3 text-white">Payment & Payroll</h3>
         <p class="text-sm text-muted">
@@ -267,7 +267,7 @@
         </p>
       </a>
 
-      <div class="glass p-8 rounded-2xl text-center border border-success/40 bg-success/5">
+	<a href="https://konectd.com" class="block glass p-8 rounded-2xl text-center hover:bg-white/5 transition">
         <i data-lucide="megaphone" class="w-10 h-10 mx-auto mb-6 text-success"></i>
         <h3 class="text-xl font-heading font-semibold mb-3 text-success">Marketing</h3>
         <p class="text-sm text-muted">
