--- a/index.html
+++ b/index.html
@@ -225,14 +225,13 @@
   </section>
 
 	  <div class="section-divider"></div>
-  
-<!-- Konectd Solutions Portfolio -->
+  <!-- Konectd Solutions Portfolio -->
   <section class="section-padding container mx-auto px-8 bg-black/30">
     <h2 class="text-4xl md:text-5xl font-heading font-semibold text-center mb-16 text-white">
       The Full Konectd Solutions Portfolio
     </h2>
     <p class="text-xl text-muted text-center mb-16 max-w-4xl mx-auto">
-      Marketing is just one part of how we help businesses thrive. Konectd Solutions offers a complete ecosystem of services — all designed to support small and medium-sized companies like yours.
+      Payments is just one part of how we help businesses thrive. Konectd Solutions offers a complete ecosystem of services — all designed to support small and medium-sized companies like yours.
     </p>
     <div class="grid md:grid-cols-2 lg:grid-cols-5 gap-8 max-w-7xl mx-auto">
       <a href="https://konectd.solutions" class="block glass p-8 rounded-2xl text-center hover:bg-white/5 transition">
@@ -243,11 +242,11 @@
         </p>
       </a>
 
-       <div class="glass p-8 rounded-2xl text-center border border-success/40 bg-success/5">
+      <a href="https://konectd.com" class="block glass p-8 rounded-2xl text-center hover:bg-white/5 transition">
         <i data-lucide="credit-card" class="w-10 h-10 mx-auto mb-6 text-primary"></i>
-        <h3 class="text-xl font-heading font-semibold mb-3 text-white">Payment & Payroll</h3>
+        <h3 class="text-xl font-heading font-semibold mb-3 text-white"> Marketing</h3>
         <p class="text-sm text-muted">
-          Secure, streamlined payments and payroll — save time and reduce errors.
+          AI-powered customer acquisition, reputation, local SEO, social, and re-engagement — you're here now.
         </p>
       </a>
 
@@ -267,11 +266,11 @@
         </p>
       </a>
 
-	<a href="https://konectd.com" class="block glass p-8 rounded-2xl text-center hover:bg-white/5 transition">
+      <div class="glass p-8 rounded-2xl text-center border border-success/40 bg-success/5">
         <i data-lucide="megaphone" class="w-10 h-10 mx-auto mb-6 text-success"></i>
-        <h3 class="text-xl font-heading font-semibold mb-3 text-success">Marketing</h3>
+        <h3 class="text-xl font-heading font-semibold mb-3 text-success">Payment & Payroll</h3>
         <p class="text-sm text-muted">
-          AI-powered customer acquisition, reputation, local SEO, social, and re-engagement — you're here now.
+          Secure, streamlined payments and payroll — save time and reduce errors.
         </p>
       </div>
     </div>
